language/move-lang/tests/move_check/expansion/duplicate_field_pack.move
module M {
    struct S { f: u64 }
    foo() {
        S { f: 0, f: 0 };
    }
}
